# profi-sh-API-rs

./: Cargo.toml  Dockerfile  fly.toml
src/: apikey.rs  handlers.rs  main.rs
