[package]
name = "profi-sh-API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "http1"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = "0.1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "uuid",
    "chrono",
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
jsonwebtoken = "9.2"
bcrypt = "0.17"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }